--- a/index.html
+++ b/index.html
@@ -5,7 +5,22 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Complete to get free 15 GB</title>
   <style>
-    body {margin:0;display:flex;align-items:center;justify-content:center;height:100vh;background:#0f172a;color:#fff;font-family:Arial, sans-serif;text-align:center}
+    body {
+      margin:0;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      height:100vh;
+      background:url('https://gifdb.com/images/high/falling-stars-g12ux36ccv3n6r8b.gif') center center / cover no-repeat fixed;
+      color:#fff;
+      font-family:Arial, sans-serif;
+      text-align:center;
+    }
+    .overlay {
+      background:rgba(0,0,0,0.5);
+      padding:40px;
+      border-radius:12px;
+    }
   </style>
   <script>
     window.onload = function() {
@@ -16,7 +31,7 @@
   </script>
 </head>
 <body>
-  <div>
+  <div class="overlay">
     <h1>You must complete this to get free 15 GB</h1>
     <p>Redirecting in 5 seconds...</p>
   </div>
